--- a/allensdk/brain_observatory/nwb/ndx-aibs-behavior-ophys.extension.yaml
+++ b/allensdk/brain_observatory/nwb/ndx-aibs-behavior-ophys.extension.yaml
@@ -119,7 +119,7 @@ groups:
   - name: imaging_depth
     dtype: int
     doc: Depth (microns) below the cortical surface targeted for two-photon acquisition
-  - name: average_container_depth
+  - name: targeted_imaging_depth
     dtype: int
     doc: Average imaging_depth (microns) across experiments in a container
 - neurodata_type_def: OphysEyeTrackingRigMetadata
