--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 psycopg2-binary
-hdmf>=2.5.8
+hdmf
 h5py
 matplotlib>=1.4.3,<3.4.3
 numpy
@@ -12,7 +12,7 @@ future >= 0.14.3,<1.0.0
 requests<3.0.0
 requests-toolbelt<1.0.0
 simplejson>=3.10.0,<4.0.0
-scikit-image>=0.14.0,<0.17.0
+scikit-image>=0.14.0
 scikit-build<1.0.0
 statsmodels<=0.13.0
 simpleitk>=2.0.2,<3.0.0
@@ -20,7 +20,7 @@ argschema>=3.0.1,<4.0.0
 glymur==0.8.19
 xarray
 pynwb
-tables>=3.6.0,<3.7.0
+tables
 seaborn<1.0.0
 aiohttp==3.7.4
 nest_asyncio
