--- a/.github/workflows/notebook_runner.yml
+++ b/.github/workflows/notebook_runner.yml
@@ -14,6 +14,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          auto-update-conda: true
+          python-version: ${{ matrix.python-version }}
       - name: Install
         run: |
           pip install -r requirements.txt
