--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ hdmf<2.5.0
 h5py>=2.8,<3.0.0
 matplotlib>=1.4.3,<3.4.3
 numpy>=1.15.4,<1.19.0
-pandas>=0.25.1,<=0.25.3
+pandas
 jinja2>=2.7.3,<2.12.0
 scipy>=1.4.0,<2.0.0
 six>=1.9.0,<2.0.0
