--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,13 @@ authors = ["Allen Institute for Brain Science"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.8,<=3.11"
+python = ">=3.8,<3.12"
 psycopg2-binary = "^2.9.6"
-hdmf = "^3.7.0"
+hdmf = "<=3.4.7"
 h5py = "^3.9.0"
 matplotlib = "^3.7.2"
-numpy = "<1.25"
-pandas = "^2.0.3"
+numpy = "<1.24"
+pandas = "1.5.3"
 jinja2 = "^3.1.2"
 scipy = "<1.11"
 six = "^1.16.0"
@@ -28,19 +28,18 @@ simpleitk = "^2.2.1"
 argschema = "^3.0.4"
 glymur = "^0.12.8"
 xarray = "<2023.2.0"
-pynwb = "^2.3.3"
+pynwb = "<=2.3.3"
 tables = "^3.8.0"
 seaborn = "^0.12.2"
 aiohttp = "^3.8.5"
 nest-asyncio = "^1.5.6"
 tqdm = "^4.65.0"
 ndx-events = "^0.2.0"
-boto3 = "^1.28.8"
+boto3 = "^1.28.10"
 semver = "^3.0.1"
 cachetools = "^5.3.1"
 sqlalchemy = "^2.0.19"
 python-dateutil = "^2.8.2"
-
 
 [build-system]
 requires = ["poetry-core"]
