--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,33 @@
 psycopg2-binary
 hdmf<=3.4.7
 h5py
-matplotlib>=1.4.3
-numpy
-pandas>=1.1.5
-jinja2>=3.0.0
-scipy>=1.4.0,<2.0.0
-six>=1.9.0,<2.0.0
-pynrrd>=0.2.1,<1.0.0
-future >= 0.14.3,<1.0.0
-requests<3.0.0
-requests-toolbelt<1.0.0
-simplejson>=3.10.0,<4.0.0
-scikit-image>=0.14.0
-scikit-build<1.0.0
+matplotlib
+numpy<1.24
+pandas==1.5.3
+jinja2
+scipy<1.11
+six
+pynrrd
+future
+requests
+requests-toolbelt
+simplejson
+scikit-image
+scikit-build
 statsmodels
-simpleitk>=2.0.2,<3.0.0
-argschema>=3.0.1,<4.0.0
-glymur==0.8.19
-xarray
-pynwb
+simpleitk
+argschema
+glymur
+xarray<2023.2.0
+pynwb<=2.3.3
 tables
-seaborn<1.0.0
-aiohttp==3.7.4
+seaborn
+aiohttp
 nest_asyncio
-tqdm>=4.27
-ndx-events<=0.2.0
-boto3==1.17.21
+tqdm
+ndx-events
+boto3
 semver
-cachetools>=4.2.1,<5.0.0
+cachetools
 sqlalchemy
 python-dateutil
