--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,33 @@
-aiohttp==3.8.5 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-aiosignal==1.3.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-argschema==3.0.4 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-async-timeout==4.0.2 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-attrs==23.1.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-blosc2==2.0.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-boto3==1.28.10 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-botocore==1.31.10 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-cachetools==5.3.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-certifi==2023.7.22 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-charset-normalizer==3.2.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-colorama==0.4.6 ; python_version >= "3.8" and python_full_version <= "3.11.0" and platform_system == "Windows"
-contourpy==1.1.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-cycler==0.11.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-cython==3.0.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-distro==1.8.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-fonttools==4.41.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-frozenlist==1.4.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-future==0.18.3 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-glymur==0.12.8 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-greenlet==2.0.2 ; python_version >= "3.8" and python_full_version <= "3.11.0" and (platform_machine == "win32" or platform_machine == "WIN32" or platform_machine == "AMD64" or platform_machine == "amd64" or platform_machine == "x86_64" or platform_machine == "ppc64le" or platform_machine == "aarch64")
-h5py==3.9.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-hdmf==3.4.7 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-idna==3.4 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-imageio==2.31.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-importlib-resources==6.0.0 ; python_version >= "3.8" and python_version < "3.10"
-jinja2==3.1.2 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-jmespath==1.0.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-jsonschema-specifications==2023.7.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-jsonschema==4.18.4 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-kiwisolver==1.4.4 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-lazy-loader==0.3 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-lxml==4.9.3 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-markupsafe==2.1.3 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-marshmallow==3.20.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-matplotlib==3.7.2 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-msgpack==1.0.5 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-multidict==6.0.4 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-ndx-events==0.2.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-nest-asyncio==1.5.6 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-networkx==3.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-nptyping==2.5.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-numexpr==2.8.4 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-numpy==1.23.5 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-packaging==23.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-pandas==1.5.3 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-patsy==0.5.3 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-pillow==10.0.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-pkgutil-resolve-name==1.3.10 ; python_version >= "3.8" and python_version < "3.9"
-psycopg2-binary==2.9.6 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-py-cpuinfo==9.0.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-pynrrd==1.0.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-pynwb==2.2.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-pyparsing==3.0.9 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-python-dateutil==2.8.2 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-pytz==2023.3 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-pywavelets==1.4.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-pyyaml==6.0.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-referencing==0.30.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-requests-toolbelt==1.0.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-requests==2.31.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-rpds-py==0.9.2 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-ruamel-yaml-clib==0.2.7 ; platform_python_implementation == "CPython" and python_full_version <= "3.11.0" and python_version >= "3.8"
-ruamel-yaml==0.17.32 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-s3transfer==0.6.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-scikit-build==0.17.6 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-scikit-image==0.21.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-scipy==1.10.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-seaborn==0.12.2 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-semver==3.0.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-setuptools==68.0.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-simpleitk==2.2.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-simplejson==3.19.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-six==1.16.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-sqlalchemy==2.0.19 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-statsmodels==0.14.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-tables==3.8.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-tifffile==2023.7.10 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-tomli==2.0.1 ; python_version >= "3.8" and python_version < "3.11"
-tqdm==4.65.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-typing-extensions==4.7.1 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-urllib3==1.26.16 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-wheel==0.41.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-xarray==2023.1.0 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-yarl==1.9.2 ; python_version >= "3.8" and python_full_version <= "3.11.0"
-zipp==3.16.2 ; python_version >= "3.8" and python_version < "3.10"
+psycopg2-binary
+hdmf<=3.4.7
+h5py
+matplotlib
+numpy<1.24
+pandas==1.5.3
+jinja2
+scipy<1.11
+six
+pynrrd
+future
+requests
+requests-toolbelt
+simplejson
+scikit-image
+scikit-build
+statsmodels
+simpleitk
+argschema
+glymur
+xarray<2023.2.0
+pynwb<=2.3.3
+tables
+seaborn
+aiohttp
+nest_asyncio
+tqdm
+ndx-events
+boto3
+semver
+cachetools
+sqlalchemy
+python-dateutil
