--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -19,7 +19,7 @@ jobs:
       - name: run test in docker
         run: |
           docker run \
-              --env-file /local1/github_worker/env_nightly.list \
+              --env-file ~/github_worker/env_nightly.list \
               --mount type=bind,source=$PWD,target=/home/ghworker,bind-propagation=rshared \
               --mount type=bind,source=/data/informatics/module_test_data/,target=/data/informatics/module_test_data/,bind-propagation=rshared,ro \
               --mount type=bind,source=/allen/,target=/allen/,bind-propagation=rshared,ro \
