--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,12 +7,15 @@ version: 2
 sphinx:
   builder: html
 
+build:
+  os: ubuntu-22.04
+    tools:
+      python: "3.7"
+
 python:
-   version: 3.7
    install:
       - requirements: doc_requirements.txt
 
 formats:
   - epub
   - pdf
-
